# CrawlStudio

./: .flake8  .gitignore  .pre-commit-config.yaml  BROWSER_USE_SETUP.md  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  PYPI_DEPLOYMENT.md  README.md  crawl_wta.py  depth_crawler_demo.py  enhancement_suggestions.md  mkdocs.yml  pyproject.toml  recursive_crawling_demo.py  requirements.txt  simple_browser_use_test.py  test_guardian_comparison.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-check.yml  test.yml
crawlstudio/: __init__.py  cli.py  exceptions.py  models.py  utils.py
crawlstudio/backends/: __init__.py  base.py  browser_use.py  crawl4ai.py  firecrawl.py  scrapy.py
docs/: getting-started.md  index.md
docs/api/: backends.md  models.md
examples/: README.md  demo.py
tests/: conftest.py  run_all_tests.py
tests/backends/: test_browser_use.py  test_crawl4ai.py  test_firecrawl.py  test_scrapy.py
tests/integration/: test_backend_comparison.py
tests/manual/: README.md  comprehensive_test.py  legacy_test_firecrawl.py  run_simple_tests.py  simple_crawl4ai_test.py  simple_scrapy_test.py  simple_test.py  test_firecrawl.py
